--- a/html/jh.html
+++ b/html/jh.html
@@ -167,7 +167,7 @@
                 </li>
             </ul>
             <ul class="question">
-                <li class="q">Q) 대리석 식탁은 김치 국물, 커피에 의한 변색 또는 스크래치가 잘 나지 않나요?</li>
+                <li class="q">Q) 대리석 식탁은 변색 또는 스크래치가 잘 나지 않나요?</li>
                 <li class="a">A) 
                 천연석의 식탁 상판 표면에 불포화 요소 수지의 코팅처리를 하여 물이나 음식물을 흡수되는 것을 막아 주지만, 오랜 시간 방치할 경우 스며들 수 있으니 바로 닦아 주세요. 생활 스크래치가 발생한 경우는 더욱 침투가 빨리 되므로 신속히 닦아주세요.<br><br>
                 </li>
