--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
     </div>
     <div class="gemstone">
-        <li><a href="html/jh_FAQ.html" target="_blank">우정현(팀장)</a></li>
+        <li><a href="html/jeonghyun_FAQ.html" target="_blank">우정현(팀장)</a></li>
         <li><a href="html/yuna_FAQ.html" target="_blank">최유나(부팀장)</a></li>
-        <li><a href="html/chanhyeong_FAQ.html" target="_blank">박찬형</a></li>
-        <li><a href="html/ch2_FAQ.html" target="_blank">조채이</a></li>
-        <li><a href="html/gn_joy_FAQ.html" target="_blank">박규남</a></li>
+        <li><a href="html/chanyeong_FAQ.html" target="_blank">박찬형</a></li>
+        <li><a href="html/cheai_FAQ.html" target="_blank">조채이</a></li>
+        <li><a href="html/gyunam_FAQ.html" target="_blank">박규남</a></li>
     </div>
     
     <div class="obody"></div>
